webapp/src/app/resource/components/detailed-metadata/detailed-metadata.component.scss
@import "colors";
@import "typography";
@import "spacing";
@import "@material/ripple/mdc-ripple";

h5,h6 {
    margin-bottom: 0; 
    color: $brand-green; // Is this just in the metadata section?
}

:host {
    padding-left: 20px;
    z-index: inherit;
}

.image-thumbnail {
    width: fit-content;
    background-color: $white;
    margin-top: 16px;
    margin-right: 5px;
    border: 8px solid #FFFFFF;
    box-sizing: border-box;

    box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12), 0px 3px 3px rgba(0, 0, 0, 0.14);
    border-radius: 4px;
    img {
        max-width: 279px;
        max-height: 279px;
        object-fit: cover;
    }
}

.subjects-grades {
    img {
        margin-right: 8px;
        object-fit: none;
        align-self: flex-start;
    }
    display: flex;
    background-color: $white;
    margin-top: 32px;
    color: $brand-green;
    .subjects {
        margin: 0;
    }
    .grades {
        margin: 0;
    }
}

.details {
    font-family: $font-family-title;
    margin-top: 15px;
    display: grid;
    grid-template-areas: "label value";
    grid-row-gap: $spacer;
    grid-template-columns: 85px 1fr;
    margin-bottom: $spacer-lg;
    background-color: $white;
    > label {
        grid-area: "label";
        font-style: normal;
        font-weight: 200;
        font-size: 14.1px;
        line-height: 117%;
        letter-spacing: -0.021em;
     }
    > .value {
        grid-area: "value" ;
        font-weight: regular;
        font-size: 14.1px;
        line-height: 117%;
        > div {
            text-overflow: ellipsis;
            white-space: nowrap;
            overflow: hidden;
            max-width: 226px;
        }
    }
}

.playlists {
    h6 { margin-top: 0; }
    caption {
        font-style: normal;
        font-weight: normal;
        font-size: 0.825rem;
        line-height: 18px;
        color: rgba($neutral-900, 0.65);
    }
    .playlist-card {
        @include mdc-ripple-surface;
        @include mdc-ripple-radius-bounded;
        @include mdc-states;

        padding: 0.5rem 1rem;
        margin: 1rem 1rem 1rem 0;

        position: relative;
        border-radius: 4px;
        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 0px 2px rgba(0, 0, 0, 0.14);
        background: url('/assets/images/green-spot.png');
        background-repeat: no-repeat;
        background-size: auto 100%;
        background-color: $white;
        overflow: hidden;
        display: flex;
        color: $neutral-900;

        .assessment-type-icon {
            color: $white;
            font-size: 3rem;
            margin-top: -0.125rem;
            margin-bottom: 1rem;
            &:before {
                content: '';
                mix-blend-mode: multiply;
                background-color: $brand-green;
                display: block;
                position: absolute;
                width: 8px;
                top: 0;
                bottom: 0;
                left: 0;
                opacity: 0.2;
            }
        }
        .playlist-title {
            margin-left: 30px;
            display: flex;
            flex-direction: column;
            justify-content: center;
            .title {
                font-family: $font-family-title;
                font-weight: 300;
            }
            .resources {
                color: rgba($neutral-900, 0.65);
                font-size: 0.825rem;
            }
        }
        .playlist-icon {
            color: $neutral-900;
            font-size: 24px;
            position: absolute;
            right: 1rem;
        }
    }
}

.link-card  {
    @include mdc-ripple-surface;
    @include mdc-ripple-radius-bounded;
    @include mdc-states;

    background-image: url('/assets/images/attachment-card-bg.png');
    background-repeat: no-repeat;
    background-size: auto 100%;

    border-radius: 2px;
    margin-bottom: $spacer;
    margin-right: $spacer;
    // cursor: pointer;
    display: block;
    color: $neutral-900;
    background-color: $white;

    // keeps the ripple inside the card.
    position: relative;
    overflow: hidden;

    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 0px 2px rgba(0, 0, 0, 0.14);
    padding: $spacer $spacer $spacer $spacer-md;

    .type-info {
        display: flex;
        justify-content: space-between;

        .link-subtitle {
            text-transform: uppercase;
            font-family: $font-family-title;
            font-size: $font-size-body-2;
            line-height: 18px;
            letter-spacing: 0.08em;
            color: rgba(33, 38, 47, 0.65);;
        }
    }

    sbdl-icon {
        color: $action-700;
    }
}

